--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.App {
+  text-align: center;
+}
+
+.movies {
+  margin: 5px;
+  border: 1px;
+  border-style: solid;
+  border-width: 1px;
+  width: 20%;
+  padding: 25px;
+  font-weight: bold;
+  font-size: large;
+}
+
+.title {
+  width: 20%;
+  text-align: center;
+}
+
+.add {
+  width: 20%;
+  margin: 5px;
+}
